force-app/main/default/objects/Order/fields/Endereco__c.field-meta.xml
<CustomField>
    <fullName>Endereco__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Endereço</label>
    <referenceTo>Endereco__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>