force-app/main/default/objects/Order/fields/Numero_Pedido_Representante__c.field-meta.xml
<CustomField>
    <fullName>Numero_Pedido_Representante__c</fullName>
    <label>Número do Pedido Representante</label>
    <length>80</length>
    <type>Text</type>
</CustomField>