force-app/main/default/objects/Order/fields/PaymentTerm__c.field-meta.xml
<CustomField>
    <fullName>PaymentTerm__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Condição de Pagamento</label>
    <referenceTo>PaymentTerm__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>