force-app/main/default/objects/Order/fields/Precos_Recalculados__c.field-meta.xml
<CustomField>
    <fullName>Precos_Recalculados__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Precos Recalculados</label>
    <type>Checkbox</type>
</CustomField>