force-app/main/default/objects/Order/fields/PricesRecalculated__c.field-meta.xml
<CustomField>
    <fullName>PricesRecalculated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prices Recalculated</label>
    <type>Checkbox</type>
</CustomField>