force-app/main/default/objects/Order/fields/RepresentativeOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>RepresentativeOrderNumber__c</fullName>
    <label>Número do Pedido Representante</label>
    <length>80</length>
    <type>Text</type>
</CustomField>