force-app/main/default/objects/Order/fields/Tipo_Frete__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Frete__c</fullName>
    <label>Tipo de Frete</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CIF</fullName>
            </value>
            <value>
                <fullName>FOB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>